Resolved alignment issues and add required tag to form fields

--- a/style.css
+++ b/style.css
@@ -291,6 +291,10 @@ body {
     font-family: 'Poppins', sans-serif;
   }
 
+  #error_div {
+    display: none;
+  }
+
   .nav-bar {
     display: flex;
     justify-content: center;
@@ -1025,7 +1029,7 @@ body {
     border-radius: 4px;
     height: 3.25rem;
     color: #1a2236;
-    padding-top: 1.438rem;
+    padding-top: 0.438rem;
     padding-bottom: 0.5rem;
     padding-left: 1rem;
     font-family: 'Poppins', sans-serif;
@@ -1121,6 +1125,7 @@ body {
     width: 100%;
     background: #f9f9fa;
     height: 43.5rem;
+    padding-top: 15%;
   }
 
   .contact-form-section > h2 {
@@ -1132,7 +1137,6 @@ body {
     line-height: 100%;
     margin-top: 0;
     margin-bottom: 0;
-    text-align: center;
     color: #1a2236;
   }
 
@@ -1863,6 +1867,10 @@ body {
     color: #1a2236;
     font-size: 1rem;
     font-family: 'Poppins', sans-serif;
+  }
+
+  #error_div {
+    display: none;
   }
 
   .send_feeed {
